github changes index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Starting A New Repo</h1>
     <h2>Learning this thing</h2>
+   <h3>Commiting from github itself</h3>
 </body>
 </html>
